# ai_ml_playground

./: readme.md
jupyters/: .gitignore  readme.md
jupyters/data/small_eval/: complaints_initials.ipynb  complaints_initials.json
jupyters/multiple_linear_regression_and_adj_r-squared/: multiple_linear_regression_and_adj_r-squared.ipynb  readme.md
jupyters/multiple_linear_regression_with_sklearn/: multiple_linear_regression_with_sklearn.ipynb
jupyters/pos/: pos.ipynb  readme.md
jupyters/simple_linear_regression_with_sklearn/: readme.md  simple_linear_regression_with_sklearn.ipynb
jupyters/simple_linear_regression_with_statsmodels/: readme.md  simple_linear_regression_with_statsmodels_practice.ipynb
jupyters/tf-idf-vectorizer_sckit-learn_ex1/: readme.md  tf-idf-vectorizer_sckit-learn_ex1.ipynb
jupyters/ticket_classif_ex2/: logreg_model.pkl  readme.md  tfidf.pkl  ticket_classif_ex2.ipynb
jupyters/ticket_classification_ex1/: ticket_classification.ipynb
py_scikit_learn_logistic_regression_qa_1/: main.py  readme.md
rust_bert_test/: Cargo.toml  readme.md
rust_bert_test/src/: main.rs
rust_smartcore_logistic_regression_iris/: .gitignore  Cargo.toml  readme.md
rust_smartcore_logistic_regression_iris/src/: main.rs
rust_statistics/: Cargo.toml  readme.md
rust_statistics/src/: dataset.rs  lib.rs  salary.rs
rust_statistics/src/stats/: central_tendency.rs  mod.rs
