[package]
name = "rust_statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"
ordered-float = "3.7.0"
plotly = "0.8.4"
reqwest = { version = "0.11.18", features = [ "blocking" ] }
serde = { version = "1.0.171", features = [ "derive" ] }
statrs = "0.16.0"
